load("@bazeldnf//:def.bzl", "bazeldnf")
load("@bazeldnf//:deps.bzl", "rpmtree", "tar2files")
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "cryptsetup",
    srcs = ["//rpm:cryptsetup-libs/usr/lib64"],
    hdrs = ["//rpm:cryptsetup-libs/usr/include"],
    linkstatic = 1,
    strip_include_prefix = "/rpm/cryptsetup-libs/",
    visibility = ["//visibility:public"],
)

cc_library(
    name = "libvirt",
    srcs = ["//rpm:libvirt-libs/usr/lib64"],
    hdrs = ["//rpm:libvirt-libs/usr/include/libvirt"],
    include_prefix = "libvirt",
    linkstatic = 1,
    strip_include_prefix = "/rpm/libvirt-libs/",
    visibility = ["//visibility:public"],
)

bazeldnf(
    name = "ldd-cryptsetup",
    command = "ldd",
    libs = [
        "/usr/lib64/libcryptsetup.so.12",
    ],
    rpmtree = ":cryptsetup-devel",
    rulename = "cryptsetup-libs",
)

bazeldnf(
    name = "ldd-libvirt",
    command = "ldd",
    libs = [
        "/usr/lib64/libvirt-lxc.so.0",
        "/usr/lib64/libvirt-qemu.so.0",
        "/usr/lib64/libvirt.so.0",
        "/usr/lib64/libkrb5support.so.0",
        "/usr/lib64/libkeyutils.so.1",
        "/usr/lib64/liblz4.so.1",
        "/usr/lib64/libmount.so.1",
    ],
    rpmtree = ":libvirt-devel",
    rulename = "libvirt-libs",
)

bazeldnf(
    name = "ldd-glibc",
    command = "ldd",
    libs = [
        "/usr/lib64/ld-linux-x86-64.so.2",
    ],
    rpmtree = ":glibc",
    rulename = "ld-linux-x86-64-libs",
)

genrule(
    name = "ld",
    srcs = ["//rpm:ld-linux-x86-64-libs/usr/lib64"],
    outs = ["ld-linux-x86-64.so.2"],
    cmd = "cp $(location //rpm:ld-linux-x86-64-libs/usr/lib64) $@",
    executable = 1,
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "containerized-libvirt",
    rpms = [
        "@SDL2-0__2.26.3-1.fc37.x86_64//rpm",
        "@SDL2_image-0__2.6.3-1.fc37.x86_64//rpm",
        "@adwaita-cursor-theme-0__43-1.fc37.x86_64//rpm",
        "@adwaita-icon-theme-0__43-1.fc37.x86_64//rpm",
        "@alsa-lib-0__1.2.8-2.fc37.x86_64//rpm",
        "@alternatives-0__1.22-1.fc37.x86_64//rpm",
        "@at-spi2-atk-0__2.38.0-5.fc37.x86_64//rpm",
        "@at-spi2-core-0__2.44.1-2.fc37.x86_64//rpm",
        "@atk-0__2.38.0-2.fc37.x86_64//rpm",
        "@attr-0__2.5.1-5.fc37.x86_64//rpm",
        "@audit-libs-0__3.1-2.fc37.x86_64//rpm",
        "@authselect-0__1.4.2-1.fc37.x86_64//rpm",
        "@authselect-libs-0__1.4.2-1.fc37.x86_64//rpm",
        "@avahi-libs-0__0.8-18.fc37.x86_64//rpm",
        "@basesystem-0__11-14.fc37.x86_64//rpm",
        "@bash-0__5.2.15-1.fc37.x86_64//rpm",
        "@boost-iostreams-0__1.78.0-9.fc37.x86_64//rpm",
        "@boost-system-0__1.78.0-9.fc37.x86_64//rpm",
        "@boost-thread-0__1.78.0-9.fc37.x86_64//rpm",
        "@brlapi-0__0.8.4-7.fc37.x86_64//rpm",
        "@bzip2-0__1.0.8-12.fc37.x86_64//rpm",
        "@bzip2-libs-0__1.0.8-12.fc37.x86_64//rpm",
        "@ca-certificates-0__2023.2.60-1.0.fc37.x86_64//rpm",
        "@cairo-0__1.17.6-2.fc37.x86_64//rpm",
        "@cairo-gobject-0__1.17.6-2.fc37.x86_64//rpm",
        "@capstone-0__4.0.2-11.fc37.x86_64//rpm",
        "@cdparanoia-libs-0__10.2-40.fc37.x86_64//rpm",
        "@checkpolicy-0__3.5-1.fc37.x86_64//rpm",
        "@colord-libs-0__1.4.6-2.fc37.x86_64//rpm",
        "@coreutils-0__9.1-7.fc37.x86_64//rpm",
        "@coreutils-common-0__9.1-7.fc37.x86_64//rpm",
        "@corosynclib-0__3.1.7-1.fc37.x86_64//rpm",
        "@cracklib-0__2.9.7-30.fc37.x86_64//rpm",
        "@crypto-policies-0__20220815-1.gite4ed860.fc37.x86_64//rpm",
        "@crypto-policies-scripts-0__20220815-1.gite4ed860.fc37.x86_64//rpm",
        "@cryptsetup-libs-0__2.6.1-1.fc37.x86_64//rpm",
        "@cups-libs-1__2.4.2-10.fc37.x86_64//rpm",
        "@curl-minimal-0__7.85.0-8.fc37.x86_64//rpm",
        "@cyrus-sasl-0__2.1.28-8.fc37.x86_64//rpm",
        "@cyrus-sasl-gssapi-0__2.1.28-8.fc37.x86_64//rpm",
        "@cyrus-sasl-lib-0__2.1.28-8.fc37.x86_64//rpm",
        "@daxctl-libs-0__76.1-1.fc37.x86_64//rpm",
        "@dbus-1__1.14.6-1.fc37.x86_64//rpm",
        "@dbus-broker-0__33-1.fc37.x86_64//rpm",
        "@dbus-common-1__1.14.6-1.fc37.x86_64//rpm",
        "@dbus-libs-1__1.14.6-1.fc37.x86_64//rpm",
        "@device-mapper-0__1.02.175-9.fc37.x86_64//rpm",
        "@device-mapper-event-0__1.02.175-9.fc37.x86_64//rpm",
        "@device-mapper-event-libs-0__1.02.175-9.fc37.x86_64//rpm",
        "@device-mapper-libs-0__1.02.175-9.fc37.x86_64//rpm",
        "@device-mapper-multipath-libs-0__0.9.0-4.fc37.x86_64//rpm",
        "@device-mapper-persistent-data-0__0.9.0-8.fc37.x86_64//rpm",
        "@diffutils-0__3.8-3.fc37.x86_64//rpm",
        "@dmidecode-1__3.4-2.fc37.x86_64//rpm",
        "@dnsmasq-0__2.89-1.fc37.x86_64//rpm",
        "@e2fsprogs-libs-0__1.46.5-3.fc37.x86_64//rpm",
        "@ebtables-legacy-0__2.0.11-12.fc37.x86_64//rpm",
        "@edk2-ovmf-0__20230301gitf80f052277c8-1.fc37.x86_64//rpm",
        "@elfutils-default-yama-scope-0__0.189-1.fc37.x86_64//rpm",
        "@elfutils-libelf-0__0.189-1.fc37.x86_64//rpm",
        "@elfutils-libs-0__0.189-1.fc37.x86_64//rpm",
        "@expat-0__2.5.0-1.fc37.x86_64//rpm",
        "@fedora-gpg-keys-0__37-2.x86_64//rpm",
        "@fedora-release-common-0__37-16.x86_64//rpm",
        "@fedora-release-container-0__37-16.x86_64//rpm",
        "@fedora-release-identity-kinoite-0__37-16.x86_64//rpm",
        "@fedora-repos-0__37-2.x86_64//rpm",
        "@filesystem-0__3.18-2.fc37.x86_64//rpm",
        "@findutils-1__4.9.0-2.fc37.x86_64//rpm",
        "@flac-libs-0__1.3.4-2.fc37.x86_64//rpm",
        "@fmt-0__9.1.0-1.fc37.x86_64//rpm",
        "@fontconfig-0__2.14.1-2.fc37.x86_64//rpm",
        "@fonts-filesystem-1__2.0.5-9.fc37.x86_64//rpm",
        "@freetype-0__2.12.1-3.fc37.x86_64//rpm",
        "@fribidi-0__1.0.12-2.fc37.x86_64//rpm",
        "@fuse-0__2.9.9-15.fc37.x86_64//rpm",
        "@fuse-common-0__3.10.5-5.fc37.x86_64//rpm",
        "@fuse-libs-0__2.9.9-15.fc37.x86_64//rpm",
        "@fuse3-libs-0__3.10.5-5.fc37.x86_64//rpm",
        "@gawk-0__5.1.1-4.fc37.x86_64//rpm",
        "@gdbm-libs-1__1.23-2.fc37.x86_64//rpm",
        "@gdk-pixbuf2-0__2.42.10-1.fc37.x86_64//rpm",
        "@gdk-pixbuf2-modules-0__2.42.10-1.fc37.x86_64//rpm",
        "@gettext-envsubst-0__0.21.1-1.fc37.x86_64//rpm",
        "@gettext-libs-0__0.21.1-1.fc37.x86_64//rpm",
        "@gettext-runtime-0__0.21.1-1.fc37.x86_64//rpm",
        "@glib2-0__2.74.6-1.fc37.x86_64//rpm",
        "@glibc-0__2.36-9.fc37.x86_64//rpm",
        "@glibc-common-0__2.36-9.fc37.x86_64//rpm",
        "@glibc-langpack-ml-0__2.36-9.fc37.x86_64//rpm",
        "@glibmm2.4-0__2.66.5-2.fc37.x86_64//rpm",
        "@glusterfs-0__10.3-1.fc37.x86_64//rpm",
        "@glusterfs-cli-0__10.3-1.fc37.x86_64//rpm",
        "@glusterfs-client-xlators-0__10.3-1.fc37.x86_64//rpm",
        "@glusterfs-fuse-0__10.3-1.fc37.x86_64//rpm",
        "@gmp-1__6.2.1-3.fc37.x86_64//rpm",
        "@gnutls-0__3.8.0-2.fc37.x86_64//rpm",
        "@gnutls-dane-0__3.8.0-2.fc37.x86_64//rpm",
        "@gnutls-utils-0__3.8.0-2.fc37.x86_64//rpm",
        "@google-noto-fonts-common-0__20201206__caret__1.git0c78c8329-7.fc37.x86_64//rpm",
        "@google-noto-sans-vf-fonts-0__20201206__caret__1.git0c78c8329-7.fc37.x86_64//rpm",
        "@gperftools-libs-0__2.9.1-4.fc37.x86_64//rpm",
        "@graphene-0__1.10.6-4.fc37.x86_64//rpm",
        "@graphite2-0__1.3.14-10.fc37.x86_64//rpm",
        "@grep-0__3.7-4.fc37.x86_64//rpm",
        "@groff-base-0__1.22.4-10.fc37.x86_64//rpm",
        "@gsm-0__1.0.22-1.fc37.x86_64//rpm",
        "@gssproxy-0__0.9.1-4.fc37.x86_64//rpm",
        "@gstreamer1-0__1.20.5-1.fc37.x86_64//rpm",
        "@gstreamer1-plugins-base-0__1.20.5-1.fc37.x86_64//rpm",
        "@gtk-update-icon-cache-0__3.24.37-1.fc37.x86_64//rpm",
        "@gtk3-0__3.24.37-1.fc37.x86_64//rpm",
        "@gzip-0__1.12-2.fc37.x86_64//rpm",
        "@harfbuzz-0__5.2.0-1.fc37.x86_64//rpm",
        "@hicolor-icon-theme-0__0.17-14.fc37.x86_64//rpm",
        "@highway-0__1.0.4-1.fc37.x86_64//rpm",
        "@hwdata-0__0.368-1.fc37.x86_64//rpm",
        "@iproute-0__5.18.0-2.fc37.x86_64//rpm",
        "@iproute-tc-0__5.18.0-2.fc37.x86_64//rpm",
        "@iptables-legacy-0__1.8.8-4.fc37.x86_64//rpm",
        "@iptables-legacy-libs-0__1.8.8-4.fc37.x86_64//rpm",
        "@iptables-libs-0__1.8.8-4.fc37.x86_64//rpm",
        "@ipxe-roms-qemu-0__20220210-2.git64113751.fc37.x86_64//rpm",
        "@iscsi-initiator-utils-0__6.2.1.4-6.git2a8f9d8.fc37.x86_64//rpm",
        "@iscsi-initiator-utils-iscsiuio-0__6.2.1.4-6.git2a8f9d8.fc37.x86_64//rpm",
        "@isns-utils-libs-0__0.101-5.fc37.x86_64//rpm",
        "@iso-codes-0__4.11.0-1.fc37.x86_64//rpm",
        "@jack-audio-connection-kit-0__1.9.21-3.fc37.x86_64//rpm",
        "@jbigkit-libs-0__2.1-24.fc37.x86_64//rpm",
        "@json-c-0__0.16-3.fc37.x86_64//rpm",
        "@json-glib-0__1.6.6-3.fc37.x86_64//rpm",
        "@kbd-0__2.5.1-3.fc37.x86_64//rpm",
        "@kbd-legacy-0__2.5.1-3.fc37.x86_64//rpm",
        "@kbd-misc-0__2.5.1-3.fc37.x86_64//rpm",
        "@keyutils-0__1.6.1-5.fc37.x86_64//rpm",
        "@keyutils-libs-0__1.6.1-5.fc37.x86_64//rpm",
        "@kmod-0__30-2.fc37.x86_64//rpm",
        "@kmod-libs-0__30-2.fc37.x86_64//rpm",
        "@krb5-libs-0__1.19.2-13.fc37.x86_64//rpm",
        "@lame-libs-0__3.100-13.fc37.x86_64//rpm",
        "@langpacks-core-font-en-0__3.0-26.fc37.x86_64//rpm",
        "@lcms2-0__2.14-1.fc37.x86_64//rpm",
        "@libX11-0__1.8.4-1.fc37.x86_64//rpm",
        "@libX11-common-0__1.8.4-1.fc37.x86_64//rpm",
        "@libX11-xcb-0__1.8.4-1.fc37.x86_64//rpm",
        "@libXau-0__1.0.10-1.fc37.x86_64//rpm",
        "@libXcomposite-0__0.4.5-8.fc37.x86_64//rpm",
        "@libXcursor-0__1.2.1-2.fc37.x86_64//rpm",
        "@libXdamage-0__1.1.5-8.fc37.x86_64//rpm",
        "@libXext-0__1.3.4-9.fc37.x86_64//rpm",
        "@libXfixes-0__6.0.0-4.fc37.x86_64//rpm",
        "@libXft-0__2.3.4-3.fc37.x86_64//rpm",
        "@libXi-0__1.8-3.fc37.x86_64//rpm",
        "@libXinerama-0__1.1.4-11.fc37.x86_64//rpm",
        "@libXrandr-0__1.5.2-9.fc37.x86_64//rpm",
        "@libXrender-0__0.9.10-17.fc37.x86_64//rpm",
        "@libXtst-0__1.2.3-17.fc37.x86_64//rpm",
        "@libXv-0__1.0.11-17.fc37.x86_64//rpm",
        "@libXxf86vm-0__1.1.4-19.fc37.x86_64//rpm",
        "@libacl-0__2.3.1-4.fc37.x86_64//rpm",
        "@libaio-0__0.3.111-14.fc37.x86_64//rpm",
        "@libarchive-0__3.6.1-3.fc37.x86_64//rpm",
        "@libargon2-0__20190702-1.fc37.x86_64//rpm",
        "@libasyncns-0__0.8-23.fc37.x86_64//rpm",
        "@libattr-0__2.5.1-5.fc37.x86_64//rpm",
        "@libb2-0__0.98.1-7.fc37.x86_64//rpm",
        "@libbasicobjects-0__0.1.1-52.fc37.x86_64//rpm",
        "@libblkid-0__2.38.1-1.fc37.x86_64//rpm",
        "@libbpf-2__0.8.0-2.fc37.x86_64//rpm",
        "@libbrotli-0__1.0.9-9.fc37.x86_64//rpm",
        "@libcacard-3__2.8.1-3.fc37.x86_64//rpm",
        "@libcap-0__2.48-5.fc37.x86_64//rpm",
        "@libcap-ng-0__0.8.3-3.fc37.x86_64//rpm",
        "@libcloudproviders-0__0.3.1-6.fc37.x86_64//rpm",
        "@libcollection-0__0.7.0-52.fc37.x86_64//rpm",
        "@libcom_err-0__1.46.5-3.fc37.x86_64//rpm",
        "@libconfig-0__1.7.3-4.fc37.x86_64//rpm",
        "@libcurl-0__7.85.0-8.fc37.x86_64//rpm",
        "@libdatrie-0__0.2.13-4.fc37.x86_64//rpm",
        "@libdb-0__5.3.28-53.fc37.x86_64//rpm",
        "@libdrm-0__2.4.114-1.fc37.x86_64//rpm",
        "@libeconf-0__0.4.0-4.fc37.x86_64//rpm",
        "@libedit-0__3.1-43.20221009cvs.fc37.x86_64//rpm",
        "@libepoxy-0__1.5.10-2.fc37.x86_64//rpm",
        "@libevent-0__2.1.12-7.fc37.x86_64//rpm",
        "@libfdisk-0__2.38.1-1.fc37.x86_64//rpm",
        "@libfdt-0__1.6.1-5.fc37.x86_64//rpm",
        "@libffado-0__2.4.7-1.fc37.x86_64//rpm",
        "@libffi-0__3.4.4-1.fc37.x86_64//rpm",
        "@libgcc-0__12.2.1-4.fc37.x86_64//rpm",
        "@libgcrypt-0__1.10.1-4.fc37.x86_64//rpm",
        "@libgfapi0-0__10.3-1.fc37.x86_64//rpm",
        "@libgfrpc0-0__10.3-1.fc37.x86_64//rpm",
        "@libgfxdr0-0__10.3-1.fc37.x86_64//rpm",
        "@libglusterd0-0__10.3-1.fc37.x86_64//rpm",
        "@libglusterfs0-0__10.3-1.fc37.x86_64//rpm",
        "@libglvnd-1__1.5.0-1.fc37.x86_64//rpm",
        "@libglvnd-egl-1__1.5.0-1.fc37.x86_64//rpm",
        "@libglvnd-glx-1__1.5.0-1.fc37.x86_64//rpm",
        "@libgomp-0__12.2.1-4.fc37.x86_64//rpm",
        "@libgpg-error-0__1.46-1.fc37.x86_64//rpm",
        "@libgudev-0__237-3.fc37.x86_64//rpm",
        "@libgusb-0__0.4.5-1.fc37.x86_64//rpm",
        "@libibverbs-0__41.0-1.fc37.x86_64//rpm",
        "@libicu-0__71.1-2.fc37.x86_64//rpm",
        "@libidn2-0__2.3.4-1.fc37.x86_64//rpm",
        "@libiec61883-0__1.2.0-30.fc37.x86_64//rpm",
        "@libini_config-0__1.3.1-52.fc37.x86_64//rpm",
        "@libiscsi-0__1.19.0-6.fc37.x86_64//rpm",
        "@libjpeg-turbo-0__2.1.3-2.fc37.x86_64//rpm",
        "@libjxl-1__0.7.0-5.fc37.x86_64//rpm",
        "@libmnl-0__1.0.5-1.fc37.x86_64//rpm",
        "@libmount-0__2.38.1-1.fc37.x86_64//rpm",
        "@libnetfilter_conntrack-0__1.0.8-5.fc37.x86_64//rpm",
        "@libnfnetlink-0__1.0.1-22.fc37.x86_64//rpm",
        "@libnfs-0__4.0.0-7.fc37.x86_64//rpm",
        "@libnfsidmap-1__2.6.2-2.rc6.fc37.x86_64//rpm",
        "@libnghttp2-0__1.51.0-1.fc37.x86_64//rpm",
        "@libnl3-0__3.7.0-2.fc37.x86_64//rpm",
        "@libnsl2-0__2.0.0-4.fc37.x86_64//rpm",
        "@libogg-2__1.3.5-4.fc37.x86_64//rpm",
        "@libpath_utils-0__0.2.1-52.fc37.x86_64//rpm",
        "@libpcap-14__1.10.3-1.fc37.x86_64//rpm",
        "@libpciaccess-0__0.16-7.fc37.x86_64//rpm",
        "@libpmem-0__1.12.0-1.fc37.x86_64//rpm",
        "@libpmemobj-0__1.12.0-1.fc37.x86_64//rpm",
        "@libpng-2__1.6.37-13.fc37.x86_64//rpm",
        "@libpsl-0__0.21.1-6.fc37.x86_64//rpm",
        "@libpwquality-0__1.4.5-3.fc37.x86_64//rpm",
        "@libqb-0__2.0.6-3.fc37.x86_64//rpm",
        "@librados2-2__17.2.5-1.fc37.x86_64//rpm",
        "@libraw1394-0__2.1.2-16.fc37.x86_64//rpm",
        "@librbd1-2__17.2.5-1.fc37.x86_64//rpm",
        "@librdmacm-0__41.0-1.fc37.x86_64//rpm",
        "@libref_array-0__0.1.5-52.fc37.x86_64//rpm",
        "@libsamplerate-0__0.2.2-3.fc37.x86_64//rpm",
        "@libseccomp-0__2.5.3-3.fc37.x86_64//rpm",
        "@libselinux-0__3.5-1.fc37.x86_64//rpm",
        "@libselinux-utils-0__3.5-1.fc37.x86_64//rpm",
        "@libsemanage-0__3.5-1.fc37.x86_64//rpm",
        "@libsepol-0__3.5-1.fc37.x86_64//rpm",
        "@libsigc__plus____plus__20-0__2.10.8-2.fc37.x86_64//rpm",
        "@libsigsegv-0__2.14-3.fc37.x86_64//rpm",
        "@libslirp-0__4.7.0-2.fc37.x86_64//rpm",
        "@libsmartcols-0__2.38.1-1.fc37.x86_64//rpm",
        "@libsndfile-0__1.1.0-4.fc37.x86_64//rpm",
        "@libsoup3-0__3.2.2-2.fc37.x86_64//rpm",
        "@libssh-0__0.10.4-2.fc37.x86_64//rpm",
        "@libssh-config-0__0.10.4-2.fc37.x86_64//rpm",
        "@libssh2-0__1.10.0-5.fc37.x86_64//rpm",
        "@libstdc__plus____plus__-0__12.2.1-4.fc37.x86_64//rpm",
        "@libstemmer-0__0-19.585svn.fc37.x86_64//rpm",
        "@libtasn1-0__4.19.0-1.fc37.x86_64//rpm",
        "@libthai-0__0.1.29-3.fc37.x86_64//rpm",
        "@libtheora-1__1.1.1-32.fc37.x86_64//rpm",
        "@libtiff-0__4.4.0-4.fc37.x86_64//rpm",
        "@libtirpc-0__1.3.3-0.fc37.x86_64//rpm",
        "@libtpms-0__0.9.6-1.fc37.x86_64//rpm",
        "@libtracker-sparql-0__3.4.2-1.fc37.x86_64//rpm",
        "@libunistring-0__1.0-2.fc37.x86_64//rpm",
        "@libunwind-0__1.6.2-5.fc37.x86_64//rpm",
        "@liburing-0__2.3-1.fc37.x86_64//rpm",
        "@libusb1-0__1.0.25-9.fc37.x86_64//rpm",
        "@libutempter-0__1.2.1-7.fc37.x86_64//rpm",
        "@libuuid-0__2.38.1-1.fc37.x86_64//rpm",
        "@libverto-0__0.3.2-4.fc37.x86_64//rpm",
        "@libverto-libevent-0__0.3.2-4.fc37.x86_64//rpm",
        "@libvirt-client-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-config-network-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-interface-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-network-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-nodedev-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-nwfilter-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-qemu-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-secret-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-core-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-disk-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-gluster-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-iscsi-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-iscsi-direct-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-logical-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-mpath-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-rbd-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-scsi-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-sheepdog-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-driver-storage-zfs-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-daemon-kvm-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-libs-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvisual-1__0.4.0-36.fc37.x86_64//rpm",
        "@libvorbis-1__1.3.7-6.fc37.x86_64//rpm",
        "@libwayland-client-0__1.21.0-1.fc37.x86_64//rpm",
        "@libwayland-cursor-0__1.21.0-1.fc37.x86_64//rpm",
        "@libwayland-egl-0__1.21.0-1.fc37.x86_64//rpm",
        "@libwayland-server-0__1.21.0-1.fc37.x86_64//rpm",
        "@libwebp-0__1.3.0-1.fc37.x86_64//rpm",
        "@libwsman1-0__2.7.1-7.fc37.x86_64//rpm",
        "@libxcb-0__1.13.1-10.fc37.x86_64//rpm",
        "@libxcrypt-0__4.4.33-4.fc37.x86_64//rpm",
        "@libxkbcommon-0__1.4.1-2.fc37.x86_64//rpm",
        "@libxml2-0__2.10.3-2.fc37.x86_64//rpm",
        "@libxml__plus____plus__-0__2.42.2-1.fc37.x86_64//rpm",
        "@libxshmfence-0__1.3-11.fc37.x86_64//rpm",
        "@libzstd-0__1.5.4-1.fc37.x86_64//rpm",
        "@linux-atm-libs-0__2.5.1-33.fc37.x86_64//rpm",
        "@llvm-libs-0__15.0.7-1.fc37.x86_64//rpm",
        "@lttng-ust-0__2.13.3-3.fc37.x86_64//rpm",
        "@lua-libs-0__5.4.4-9.fc37.x86_64//rpm",
        "@lvm2-0__2.03.11-9.fc37.x86_64//rpm",
        "@lvm2-libs-0__2.03.11-9.fc37.x86_64//rpm",
        "@lz4-libs-0__1.9.4-1.fc37.x86_64//rpm",
        "@lzo-0__2.10-7.fc37.x86_64//rpm",
        "@lzop-0__1.04-9.fc37.x86_64//rpm",
        "@mdevctl-0__1.2.0-1.fc37.x86_64//rpm",
        "@mesa-dri-drivers-0__22.3.7-1.fc37.x86_64//rpm",
        "@mesa-filesystem-0__22.3.7-1.fc37.x86_64//rpm",
        "@mesa-libEGL-0__22.3.7-1.fc37.x86_64//rpm",
        "@mesa-libGL-0__22.3.7-1.fc37.x86_64//rpm",
        "@mesa-libgbm-0__22.3.7-1.fc37.x86_64//rpm",
        "@mesa-libglapi-0__22.3.7-1.fc37.x86_64//rpm",
        "@mozjs102-0__102.9.0-1.fc37.x86_64//rpm",
        "@mpdecimal-0__2.5.1-4.fc37.x86_64//rpm",
        "@mpfr-0__4.1.0-10.fc37.x86_64//rpm",
        "@mpg123-libs-0__1.31.3-1.fc37.x86_64//rpm",
        "@ncurses-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@ncurses-base-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@ncurses-libs-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@ndctl-libs-0__76.1-1.fc37.x86_64//rpm",
        "@nettle-0__3.8-2.fc37.x86_64//rpm",
        "@nfs-utils-1__2.6.2-2.rc6.fc37.x86_64//rpm",
        "@nspr-0__4.35.0-5.fc37.x86_64//rpm",
        "@nss-0__3.89.0-1.fc37.x86_64//rpm",
        "@nss-softokn-0__3.89.0-1.fc37.x86_64//rpm",
        "@nss-softokn-freebl-0__3.89.0-1.fc37.x86_64//rpm",
        "@nss-sysinit-0__3.89.0-1.fc37.x86_64//rpm",
        "@nss-util-0__3.89.0-1.fc37.x86_64//rpm",
        "@numactl-libs-0__2.0.14-6.fc37.x86_64//rpm",
        "@numad-0__0.5-37.20150602git.fc37.x86_64//rpm",
        "@openldap-0__2.6.4-1.fc37.x86_64//rpm",
        "@openssl-libs-1__3.0.8-1.fc37.x86_64//rpm",
        "@opus-0__1.3.1-11.fc37.x86_64//rpm",
        "@orc-0__0.4.31-8.fc37.x86_64//rpm",
        "@p11-kit-0__0.24.1-3.fc37.x86_64//rpm",
        "@p11-kit-trust-0__0.24.1-3.fc37.x86_64//rpm",
        "@pam-0__1.5.2-14.fc37.x86_64//rpm",
        "@pam-libs-0__1.5.2-14.fc37.x86_64//rpm",
        "@pango-0__1.50.14-1.fc37.x86_64//rpm",
        "@parted-0__3.5-6.fc37.x86_64//rpm",
        "@pcre-0__8.45-1.fc37.2.x86_64//rpm",
        "@pcre2-0__10.40-1.fc37.1.x86_64//rpm",
        "@pcre2-syntax-0__10.40-1.fc37.1.x86_64//rpm",
        "@pcsc-lite-libs-0__1.9.9-1.fc37.x86_64//rpm",
        "@perl-Carp-0__1.52-489.fc37.x86_64//rpm",
        "@perl-Class-Struct-0__0.66-492.fc37.x86_64//rpm",
        "@perl-DynaLoader-0__1.52-492.fc37.x86_64//rpm",
        "@perl-Encode-4__3.19-492.fc37.x86_64//rpm",
        "@perl-Errno-0__1.36-492.fc37.x86_64//rpm",
        "@perl-Exporter-0__5.77-489.fc37.x86_64//rpm",
        "@perl-Fcntl-0__1.15-492.fc37.x86_64//rpm",
        "@perl-File-Basename-0__2.85-492.fc37.x86_64//rpm",
        "@perl-File-Path-0__2.18-489.fc37.x86_64//rpm",
        "@perl-File-Temp-1__0.231.100-489.fc37.x86_64//rpm",
        "@perl-File-stat-0__1.12-492.fc37.x86_64//rpm",
        "@perl-Getopt-Long-1__2.54-1.fc37.x86_64//rpm",
        "@perl-Getopt-Std-0__1.13-492.fc37.x86_64//rpm",
        "@perl-HTTP-Tiny-0__0.082-1.fc37.x86_64//rpm",
        "@perl-IO-0__1.50-492.fc37.x86_64//rpm",
        "@perl-IPC-Open3-0__1.22-492.fc37.x86_64//rpm",
        "@perl-MIME-Base64-0__3.16-489.fc37.x86_64//rpm",
        "@perl-POSIX-0__2.03-492.fc37.x86_64//rpm",
        "@perl-PathTools-0__3.84-489.fc37.x86_64//rpm",
        "@perl-Pod-Escapes-1__1.07-489.fc37.x86_64//rpm",
        "@perl-Pod-Perldoc-0__3.28.01-490.fc37.x86_64//rpm",
        "@perl-Pod-Simple-1__3.43-490.fc37.x86_64//rpm",
        "@perl-Pod-Usage-4__2.03-3.fc37.x86_64//rpm",
        "@perl-Scalar-List-Utils-5__1.63-489.fc37.x86_64//rpm",
        "@perl-SelectSaver-0__1.02-492.fc37.x86_64//rpm",
        "@perl-Socket-4__2.036-1.fc37.x86_64//rpm",
        "@perl-Storable-1__3.26-489.fc37.x86_64//rpm",
        "@perl-Symbol-0__1.09-492.fc37.x86_64//rpm",
        "@perl-Term-ANSIColor-0__5.01-490.fc37.x86_64//rpm",
        "@perl-Term-Cap-0__1.17-489.fc37.x86_64//rpm",
        "@perl-Text-ParseWords-0__3.31-489.fc37.x86_64//rpm",
        "@perl-Text-Tabs__plus__Wrap-0__2021.0814-489.fc37.x86_64//rpm",
        "@perl-Time-Local-2__1.300-489.fc37.x86_64//rpm",
        "@perl-constant-0__1.33-490.fc37.x86_64//rpm",
        "@perl-if-0__0.61.000-492.fc37.x86_64//rpm",
        "@perl-interpreter-4__5.36.0-492.fc37.x86_64//rpm",
        "@perl-libs-4__5.36.0-492.fc37.x86_64//rpm",
        "@perl-mro-0__1.26-492.fc37.x86_64//rpm",
        "@perl-overload-0__1.35-492.fc37.x86_64//rpm",
        "@perl-overloading-0__0.02-492.fc37.x86_64//rpm",
        "@perl-parent-1__0.238-489.fc37.x86_64//rpm",
        "@perl-podlators-1__4.14-489.fc37.x86_64//rpm",
        "@perl-subs-0__1.04-492.fc37.x86_64//rpm",
        "@perl-vars-0__1.05-492.fc37.x86_64//rpm",
        "@pixman-0__0.40.0-6.fc37.x86_64//rpm",
        "@policycoreutils-0__3.5-1.fc37.x86_64//rpm",
        "@policycoreutils-python-utils-0__3.5-1.fc37.x86_64//rpm",
        "@polkit-0__121-4.fc37.x86_64//rpm",
        "@polkit-libs-0__121-4.fc37.x86_64//rpm",
        "@polkit-pkla-compat-0__0.1-22.fc37.x86_64//rpm",
        "@popt-0__1.19-1.fc37.x86_64//rpm",
        "@protobuf-c-0__1.4.1-2.fc37.x86_64//rpm",
        "@psmisc-0__23.4-4.fc37.x86_64//rpm",
        "@publicsuffix-list-dafsa-0__20210518-5.fc37.x86_64//rpm",
        "@pulseaudio-libs-0__16.1-4.fc37.x86_64//rpm",
        "@python-pip-wheel-0__22.2.2-3.fc37.x86_64//rpm",
        "@python-setuptools-wheel-0__62.6.0-2.fc37.x86_64//rpm",
        "@python3-0__3.11.2-1.fc37.x86_64//rpm",
        "@python3-audit-0__3.1-2.fc37.x86_64//rpm",
        "@python3-distro-0__1.7.0-3.fc37.x86_64//rpm",
        "@python3-libs-0__3.11.2-1.fc37.x86_64//rpm",
        "@python3-libselinux-0__3.5-1.fc37.x86_64//rpm",
        "@python3-libsemanage-0__3.5-1.fc37.x86_64//rpm",
        "@python3-policycoreutils-0__3.5-1.fc37.x86_64//rpm",
        "@python3-setools-0__4.4.0-9.fc37.x86_64//rpm",
        "@python3-setuptools-0__62.6.0-2.fc37.x86_64//rpm",
        "@qemu-audio-alsa-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-audio-dbus-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-audio-jack-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-audio-oss-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-audio-pa-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-audio-sdl-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-audio-spice-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-block-curl-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-block-dmg-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-block-gluster-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-block-iscsi-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-block-nfs-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-block-rbd-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-block-ssh-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-char-baum-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-char-spice-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-common-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-qxl-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-vhost-user-gpu-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-virtio-gpu-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-virtio-gpu-ccw-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-virtio-gpu-gl-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-virtio-gpu-pci-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-virtio-gpu-pci-gl-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-virtio-vga-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-display-virtio-vga-gl-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-usb-host-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-usb-redirect-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-device-usb-smartcard-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-img-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-kvm-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-pr-helper-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-system-x86-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-system-x86-core-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-ui-curses-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-ui-egl-headless-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-ui-gtk-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-ui-opengl-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-ui-sdl-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-ui-spice-app-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-ui-spice-core-2__7.0.0-14.fc37.x86_64//rpm",
        "@qemu-virtiofsd-2__7.0.0-14.fc37.x86_64//rpm",
        "@quota-1__4.06-8.fc37.x86_64//rpm",
        "@quota-nls-1__4.06-8.fc37.x86_64//rpm",
        "@readline-0__8.2-2.fc37.x86_64//rpm",
        "@rpcbind-0__1.2.6-3.rc2.fc37.x86_64//rpm",
        "@rpm-0__4.18.0-1.fc37.x86_64//rpm",
        "@rpm-libs-0__4.18.0-1.fc37.x86_64//rpm",
        "@rpm-plugin-selinux-0__4.18.0-1.fc37.x86_64//rpm",
        "@seabios-bin-0__1.16.1-2.fc37.x86_64//rpm",
        "@seavgabios-bin-0__1.16.1-2.fc37.x86_64//rpm",
        "@sed-0__4.8-11.fc37.x86_64//rpm",
        "@selinux-policy-0__37.19-1.fc37.x86_64//rpm",
        "@selinux-policy-targeted-0__37.19-1.fc37.x86_64//rpm",
        "@setup-0__2.14.1-2.fc37.x86_64//rpm",
        "@sgabios-bin-1__0.20180715git-9.fc37.x86_64//rpm",
        "@shadow-utils-2__4.12.3-5.fc37.x86_64//rpm",
        "@shared-mime-info-0__2.2-2.fc37.x86_64//rpm",
        "@sheepdog-0__1.0.1-18.fc37.x86_64//rpm",
        "@snappy-0__1.1.9-5.fc37.x86_64//rpm",
        "@spice-server-0__0.15.1-1.fc37.x86_64//rpm",
        "@sqlite-libs-0__3.40.0-1.fc37.x86_64//rpm",
        "@swtpm-0__0.7.3-2.20220427gitf2268ee.fc37.x86_64//rpm",
        "@swtpm-libs-0__0.7.3-2.20220427gitf2268ee.fc37.x86_64//rpm",
        "@swtpm-tools-0__0.7.3-2.20220427gitf2268ee.fc37.x86_64//rpm",
        "@systemd-0__251.13-6.fc37.x86_64//rpm",
        "@systemd-boot-unsigned-0__251.13-6.fc37.x86_64//rpm",
        "@systemd-container-0__251.13-6.fc37.x86_64//rpm",
        "@systemd-libs-0__251.13-6.fc37.x86_64//rpm",
        "@systemd-pam-0__251.13-6.fc37.x86_64//rpm",
        "@systemd-udev-0__251.13-6.fc37.x86_64//rpm",
        "@trousers-0__0.3.15-7.fc37.x86_64//rpm",
        "@trousers-lib-0__0.3.15-7.fc37.x86_64//rpm",
        "@tzdata-0__2022g-1.fc37.x86_64//rpm",
        "@unbound-libs-0__1.17.1-1.fc37.x86_64//rpm",
        "@usbredir-0__0.13.0-1.fc37.x86_64//rpm",
        "@userspace-rcu-0__0.13.0-5.fc37.x86_64//rpm",
        "@util-linux-0__2.38.1-1.fc37.x86_64//rpm",
        "@util-linux-core-0__2.38.1-1.fc37.x86_64//rpm",
        "@virglrenderer-0__0.9.1-4.20210420git36391559.fc37.x86_64//rpm",
        "@vte-profile-0__0.70.3-1.fc37.x86_64//rpm",
        "@vte291-0__0.70.3-1.fc37.x86_64//rpm",
        "@which-0__2.21-39.fc37.x86_64//rpm",
        "@xen-libs-0__4.16.3-4.fc37.x86_64//rpm",
        "@xen-licenses-0__4.16.3-4.fc37.x86_64//rpm",
        "@xkeyboard-config-0__2.36-3.fc37.x86_64//rpm",
        "@xml-common-0__0.6.3-59.fc37.x86_64//rpm",
        "@xz-0__5.4.1-1.fc37.x86_64//rpm",
        "@xz-libs-0__5.4.1-1.fc37.x86_64//rpm",
        "@yajl-0__2.1.0-19.fc37.x86_64//rpm",
        "@zfs-fuse-0__0.7.2.2-23.fc37.x86_64//rpm",
        "@zita-alsa-pcmi-0__0.6.1-1.fc37.x86_64//rpm",
        "@zita-resampler-0__1.8.0-5.fc37.x86_64//rpm",
        "@zlib-0__1.2.12-5.fc37.x86_64//rpm",
    ],
    symlinks = {
        "/usr/sbin/ip6tables": "/usr/sbin/ip6tables-legacy",
        "/usr/sbin/ip6tables-save": "/usr/sbin/ip6tables-legacy-save",
        "/usr/sbin/ip6tables-save-restore": "/usr/sbin/ip6tables-legacy-restore",
        "/usr/sbin/iptables": "/usr/sbin/iptables-legacy",
        "/usr/sbin/iptables-restore": "/usr/sbin/iptables-legacy-restore",
        "/usr/sbin/iptables-save": "/usr/sbin/iptables-legacy-save",
        "/var/lock": "/run/lock",
    },
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "cryptsetup-devel",
    rpms = [
        "@alternatives-0__1.22-1.fc37.x86_64//rpm",
        "@audit-libs-0__3.1-2.fc37.x86_64//rpm",
        "@basesystem-0__11-14.fc37.x86_64//rpm",
        "@bash-0__5.2.15-1.fc37.x86_64//rpm",
        "@bzip2-libs-0__1.0.8-12.fc37.x86_64//rpm",
        "@ca-certificates-0__2023.2.60-1.0.fc37.x86_64//rpm",
        "@cmake-filesystem-0__3.26.1-1.fc37.x86_64//rpm",
        "@coreutils-0__9.1-7.fc37.x86_64//rpm",
        "@coreutils-common-0__9.1-7.fc37.x86_64//rpm",
        "@crypto-policies-0__20220815-1.gite4ed860.fc37.x86_64//rpm",
        "@cryptsetup-devel-0__2.6.1-1.fc37.x86_64//rpm",
        "@cryptsetup-libs-0__2.6.1-1.fc37.x86_64//rpm",
        "@dbus-1__1.14.6-1.fc37.x86_64//rpm",
        "@dbus-broker-0__33-1.fc37.x86_64//rpm",
        "@dbus-common-1__1.14.6-1.fc37.x86_64//rpm",
        "@device-mapper-0__1.02.175-9.fc37.x86_64//rpm",
        "@device-mapper-devel-0__1.02.175-9.fc37.x86_64//rpm",
        "@device-mapper-libs-0__1.02.175-9.fc37.x86_64//rpm",
        "@expat-0__2.5.0-1.fc37.x86_64//rpm",
        "@fedora-gpg-keys-0__37-2.x86_64//rpm",
        "@fedora-release-common-0__37-16.x86_64//rpm",
        "@fedora-release-container-0__37-16.x86_64//rpm",
        "@fedora-release-identity-i3-0__37-16.x86_64//rpm",
        "@fedora-repos-0__37-2.x86_64//rpm",
        "@filesystem-0__3.18-2.fc37.x86_64//rpm",
        "@glibc-0__2.36-9.fc37.x86_64//rpm",
        "@glibc-common-0__2.36-9.fc37.x86_64//rpm",
        "@glibc-langpack-ce-0__2.36-9.fc37.x86_64//rpm",
        "@gmp-1__6.2.1-3.fc37.x86_64//rpm",
        "@grep-0__3.7-4.fc37.x86_64//rpm",
        "@json-c-0__0.16-3.fc37.x86_64//rpm",
        "@json-c-devel-0__0.16-3.fc37.x86_64//rpm",
        "@kmod-libs-0__30-2.fc37.x86_64//rpm",
        "@libacl-0__2.3.1-4.fc37.x86_64//rpm",
        "@libargon2-0__20190702-1.fc37.x86_64//rpm",
        "@libargon2-devel-0__20190702-1.fc37.x86_64//rpm",
        "@libattr-0__2.5.1-5.fc37.x86_64//rpm",
        "@libblkid-0__2.38.1-1.fc37.x86_64//rpm",
        "@libblkid-devel-0__2.38.1-1.fc37.x86_64//rpm",
        "@libcap-0__2.48-5.fc37.x86_64//rpm",
        "@libcap-ng-0__0.8.3-3.fc37.x86_64//rpm",
        "@libeconf-0__0.4.0-4.fc37.x86_64//rpm",
        "@libfdisk-0__2.38.1-1.fc37.x86_64//rpm",
        "@libffi-0__3.4.4-1.fc37.x86_64//rpm",
        "@libgcc-0__12.2.1-4.fc37.x86_64//rpm",
        "@libmount-0__2.38.1-1.fc37.x86_64//rpm",
        "@libpkgconf-0__1.8.0-3.fc37.x86_64//rpm",
        "@libseccomp-0__2.5.3-3.fc37.x86_64//rpm",
        "@libselinux-0__3.5-1.fc37.x86_64//rpm",
        "@libselinux-devel-0__3.5-1.fc37.x86_64//rpm",
        "@libsemanage-0__3.5-1.fc37.x86_64//rpm",
        "@libsepol-0__3.5-1.fc37.x86_64//rpm",
        "@libsepol-devel-0__3.5-1.fc37.x86_64//rpm",
        "@libsmartcols-0__2.38.1-1.fc37.x86_64//rpm",
        "@libtasn1-0__4.19.0-1.fc37.x86_64//rpm",
        "@libuuid-0__2.38.1-1.fc37.x86_64//rpm",
        "@libuuid-devel-0__2.38.1-1.fc37.x86_64//rpm",
        "@libxcrypt-0__4.4.33-4.fc37.x86_64//rpm",
        "@libzstd-0__1.5.4-1.fc37.x86_64//rpm",
        "@lz4-libs-0__1.9.4-1.fc37.x86_64//rpm",
        "@ncurses-base-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@ncurses-libs-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@openssl-devel-1__3.0.8-1.fc37.x86_64//rpm",
        "@openssl-libs-1__3.0.8-1.fc37.x86_64//rpm",
        "@p11-kit-0__0.24.1-3.fc37.x86_64//rpm",
        "@p11-kit-trust-0__0.24.1-3.fc37.x86_64//rpm",
        "@pam-libs-0__1.5.2-14.fc37.x86_64//rpm",
        "@pcre-0__8.45-1.fc37.2.x86_64//rpm",
        "@pcre2-0__10.40-1.fc37.1.x86_64//rpm",
        "@pcre2-devel-0__10.40-1.fc37.1.x86_64//rpm",
        "@pcre2-syntax-0__10.40-1.fc37.1.x86_64//rpm",
        "@pcre2-utf16-0__10.40-1.fc37.1.x86_64//rpm",
        "@pcre2-utf32-0__10.40-1.fc37.1.x86_64//rpm",
        "@pkgconf-0__1.8.0-3.fc37.x86_64//rpm",
        "@pkgconf-m4-0__1.8.0-3.fc37.x86_64//rpm",
        "@pkgconf-pkg-config-0__1.8.0-3.fc37.x86_64//rpm",
        "@sed-0__4.8-11.fc37.x86_64//rpm",
        "@setup-0__2.14.1-2.fc37.x86_64//rpm",
        "@shadow-utils-2__4.12.3-5.fc37.x86_64//rpm",
        "@systemd-0__251.13-6.fc37.x86_64//rpm",
        "@systemd-devel-0__251.13-6.fc37.x86_64//rpm",
        "@systemd-libs-0__251.13-6.fc37.x86_64//rpm",
        "@systemd-pam-0__251.13-6.fc37.x86_64//rpm",
        "@tzdata-0__2022g-1.fc37.x86_64//rpm",
        "@util-linux-core-0__2.38.1-1.fc37.x86_64//rpm",
        "@xz-libs-0__5.4.1-1.fc37.x86_64//rpm",
        "@zlib-0__1.2.12-5.fc37.x86_64//rpm",
    ],
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "glibc",
    rpms = [
        "@basesystem-0__11-14.fc37.x86_64//rpm",
        "@bash-0__5.2.15-1.fc37.x86_64//rpm",
        "@fedora-gpg-keys-0__37-2.x86_64//rpm",
        "@fedora-release-common-0__37-16.x86_64//rpm",
        "@fedora-release-container-0__37-16.x86_64//rpm",
        "@fedora-release-identity-cinnamon-0__37-16.x86_64//rpm",
        "@fedora-repos-0__37-2.x86_64//rpm",
        "@filesystem-0__3.18-2.fc37.x86_64//rpm",
        "@glibc-0__2.36-9.fc37.x86_64//rpm",
        "@glibc-common-0__2.36-9.fc37.x86_64//rpm",
        "@glibc-langpack-mt-0__2.36-9.fc37.x86_64//rpm",
        "@libgcc-0__12.2.1-4.fc37.x86_64//rpm",
        "@ncurses-base-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@ncurses-libs-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@setup-0__2.14.1-2.fc37.x86_64//rpm",
        "@tzdata-0__2022g-1.fc37.x86_64//rpm",
    ],
    visibility = ["//visibility:public"],
)

rpmtree(
    name = "libvirt-devel",
    rpms = [
        "@alternatives-0__1.22-1.fc37.x86_64//rpm",
        "@audit-libs-0__3.1-2.fc37.x86_64//rpm",
        "@authselect-0__1.4.2-1.fc37.x86_64//rpm",
        "@authselect-libs-0__1.4.2-1.fc37.x86_64//rpm",
        "@basesystem-0__11-14.fc37.x86_64//rpm",
        "@bash-0__5.2.15-1.fc37.x86_64//rpm",
        "@bzip2-libs-0__1.0.8-12.fc37.x86_64//rpm",
        "@ca-certificates-0__2023.2.60-1.0.fc37.x86_64//rpm",
        "@coreutils-single-0__9.1-7.fc37.x86_64//rpm",
        "@cracklib-0__2.9.7-30.fc37.x86_64//rpm",
        "@crypto-policies-0__20220815-1.gite4ed860.fc37.x86_64//rpm",
        "@cyrus-sasl-0__2.1.28-8.fc37.x86_64//rpm",
        "@cyrus-sasl-gssapi-0__2.1.28-8.fc37.x86_64//rpm",
        "@cyrus-sasl-lib-0__2.1.28-8.fc37.x86_64//rpm",
        "@fedora-gpg-keys-0__37-2.x86_64//rpm",
        "@fedora-release-common-0__37-16.x86_64//rpm",
        "@fedora-release-container-0__37-16.x86_64//rpm",
        "@fedora-release-identity-server-0__37-16.x86_64//rpm",
        "@fedora-repos-0__37-2.x86_64//rpm",
        "@filesystem-0__3.18-2.fc37.x86_64//rpm",
        "@gawk-0__5.1.1-4.fc37.x86_64//rpm",
        "@gdbm-libs-1__1.23-2.fc37.x86_64//rpm",
        "@glib2-0__2.74.6-1.fc37.x86_64//rpm",
        "@glibc-0__2.36-9.fc37.x86_64//rpm",
        "@glibc-common-0__2.36-9.fc37.x86_64//rpm",
        "@glibc-langpack-lb-0__2.36-9.fc37.x86_64//rpm",
        "@gmp-1__6.2.1-3.fc37.x86_64//rpm",
        "@gnutls-0__3.8.0-2.fc37.x86_64//rpm",
        "@grep-0__3.7-4.fc37.x86_64//rpm",
        "@gzip-0__1.12-2.fc37.x86_64//rpm",
        "@keyutils-libs-0__1.6.1-5.fc37.x86_64//rpm",
        "@krb5-libs-0__1.19.2-13.fc37.x86_64//rpm",
        "@libacl-0__2.3.1-4.fc37.x86_64//rpm",
        "@libattr-0__2.5.1-5.fc37.x86_64//rpm",
        "@libblkid-0__2.38.1-1.fc37.x86_64//rpm",
        "@libcap-0__2.48-5.fc37.x86_64//rpm",
        "@libcap-ng-0__0.8.3-3.fc37.x86_64//rpm",
        "@libcom_err-0__1.46.5-3.fc37.x86_64//rpm",
        "@libcurl-minimal-0__7.85.0-8.fc37.x86_64//rpm",
        "@libdb-0__5.3.28-53.fc37.x86_64//rpm",
        "@libeconf-0__0.4.0-4.fc37.x86_64//rpm",
        "@libevent-0__2.1.12-7.fc37.x86_64//rpm",
        "@libfdisk-0__2.38.1-1.fc37.x86_64//rpm",
        "@libffi-0__3.4.4-1.fc37.x86_64//rpm",
        "@libgcc-0__12.2.1-4.fc37.x86_64//rpm",
        "@libidn2-0__2.3.4-1.fc37.x86_64//rpm",
        "@libmount-0__2.38.1-1.fc37.x86_64//rpm",
        "@libnghttp2-0__1.51.0-1.fc37.x86_64//rpm",
        "@libnl3-0__3.7.0-2.fc37.x86_64//rpm",
        "@libnsl2-0__2.0.0-4.fc37.x86_64//rpm",
        "@libpkgconf-0__1.8.0-3.fc37.x86_64//rpm",
        "@libpwquality-0__1.4.5-3.fc37.x86_64//rpm",
        "@libselinux-0__3.5-1.fc37.x86_64//rpm",
        "@libsemanage-0__3.5-1.fc37.x86_64//rpm",
        "@libsepol-0__3.5-1.fc37.x86_64//rpm",
        "@libsigsegv-0__2.14-3.fc37.x86_64//rpm",
        "@libsmartcols-0__2.38.1-1.fc37.x86_64//rpm",
        "@libssh-0__0.10.4-2.fc37.x86_64//rpm",
        "@libssh-config-0__0.10.4-2.fc37.x86_64//rpm",
        "@libssh2-0__1.10.0-5.fc37.x86_64//rpm",
        "@libtasn1-0__4.19.0-1.fc37.x86_64//rpm",
        "@libtirpc-0__1.3.3-0.fc37.x86_64//rpm",
        "@libunistring-0__1.0-2.fc37.x86_64//rpm",
        "@libutempter-0__1.2.1-7.fc37.x86_64//rpm",
        "@libuuid-0__2.38.1-1.fc37.x86_64//rpm",
        "@libverto-0__0.3.2-4.fc37.x86_64//rpm",
        "@libvirt-devel-0__8.6.0-5.fc37.x86_64//rpm",
        "@libvirt-libs-0__8.6.0-5.fc37.x86_64//rpm",
        "@libwsman1-0__2.7.1-7.fc37.x86_64//rpm",
        "@libxcrypt-0__4.4.33-4.fc37.x86_64//rpm",
        "@libxml2-0__2.10.3-2.fc37.x86_64//rpm",
        "@libzstd-0__1.5.4-1.fc37.x86_64//rpm",
        "@lz4-libs-0__1.9.4-1.fc37.x86_64//rpm",
        "@mpfr-0__4.1.0-10.fc37.x86_64//rpm",
        "@ncurses-base-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@ncurses-libs-0__6.3-4.20220501.fc37.x86_64//rpm",
        "@nettle-0__3.8-2.fc37.x86_64//rpm",
        "@numactl-libs-0__2.0.14-6.fc37.x86_64//rpm",
        "@openldap-0__2.6.4-1.fc37.x86_64//rpm",
        "@openssl-libs-1__3.0.8-1.fc37.x86_64//rpm",
        "@p11-kit-0__0.24.1-3.fc37.x86_64//rpm",
        "@p11-kit-trust-0__0.24.1-3.fc37.x86_64//rpm",
        "@pam-0__1.5.2-14.fc37.x86_64//rpm",
        "@pam-libs-0__1.5.2-14.fc37.x86_64//rpm",
        "@pcre-0__8.45-1.fc37.2.x86_64//rpm",
        "@pcre2-0__10.40-1.fc37.1.x86_64//rpm",
        "@pcre2-syntax-0__10.40-1.fc37.1.x86_64//rpm",
        "@pkgconf-0__1.8.0-3.fc37.x86_64//rpm",
        "@pkgconf-m4-0__1.8.0-3.fc37.x86_64//rpm",
        "@pkgconf-pkg-config-0__1.8.0-3.fc37.x86_64//rpm",
        "@popt-0__1.19-1.fc37.x86_64//rpm",
        "@readline-0__8.2-2.fc37.x86_64//rpm",
        "@sed-0__4.8-11.fc37.x86_64//rpm",
        "@setup-0__2.14.1-2.fc37.x86_64//rpm",
        "@shadow-utils-2__4.12.3-5.fc37.x86_64//rpm",
        "@systemd-libs-0__251.13-6.fc37.x86_64//rpm",
        "@tzdata-0__2022g-1.fc37.x86_64//rpm",
        "@util-linux-0__2.38.1-1.fc37.x86_64//rpm",
        "@util-linux-core-0__2.38.1-1.fc37.x86_64//rpm",
        "@xz-libs-0__5.4.1-1.fc37.x86_64//rpm",
        "@yajl-0__2.1.0-19.fc37.x86_64//rpm",
        "@zlib-0__1.2.12-5.fc37.x86_64//rpm",
    ],
    visibility = ["//visibility:public"],
)

tar2files(
    name = "cryptsetup-libs",
    files = {
        "/usr/include": ["libcryptsetup.h"],
        "/usr/lib64": [
            "ld-linux-x86-64.so.2",
            "libargon2.so.1",
            "libblkid.so.1",
            "libblkid.so.1.1.0",
            "libc.so.6",
            "libcrypto.so.3",
            "libcrypto.so.3.0.8",
            "libcryptsetup.so.12",
            "libcryptsetup.so.12.9.0",
            "libdevmapper.so.1.02",
            "libjson-c.so.5",
            "libjson-c.so.5.2.0",
            "libm.so.6",
            "libselinux.so.1",
            "libssl.so.3",
            "libssl.so.3.0.8",
            "libudev.so.1",
            "libudev.so.1.7.4",
            "libuuid.so.1",
            "libuuid.so.1.3.0",
            "libz.so.1",
            "libz.so.1.2.12",
        ],
    },
    tar = ":cryptsetup-devel",
    visibility = ["//visibility:public"],
)

tar2files(
    name = "ld-linux-x86-64-libs",
    files = {"/usr/lib64": ["ld-linux-x86-64.so.2"]},
    tar = ":glibc",
    visibility = ["//visibility:public"],
)

tar2files(
    name = "libvirt-libs",
    files = {
        "/usr/include/libvirt": [
            "libvirt-admin.h",
            "libvirt-common.h",
            "libvirt-domain-checkpoint.h",
            "libvirt-domain-snapshot.h",
            "libvirt-domain.h",
            "libvirt-event.h",
            "libvirt-host.h",
            "libvirt-interface.h",
            "libvirt-lxc.h",
            "libvirt-network.h",
            "libvirt-nodedev.h",
            "libvirt-nwfilter.h",
            "libvirt-qemu.h",
            "libvirt-secret.h",
            "libvirt-storage.h",
            "libvirt-stream.h",
            "libvirt.h",
            "virterror.h",
        ],
        "/usr/lib64": [
            "ld-linux-x86-64.so.2",
            "libacl.so.1",
            "libacl.so.1.1.2301",
            "libattr.so.1",
            "libattr.so.1.1.2501",
            "libaudit.so.1",
            "libaudit.so.1.0.0",
            "libblkid.so.1",
            "libblkid.so.1.1.0",
            "libc.so.6",
            "libcap-ng.so.0",
            "libcap-ng.so.0.0.0",
            "libcom_err.so.2",
            "libcom_err.so.2.1",
            "libcrypt.so.2",
            "libcrypt.so.2.0.0",
            "libcrypto.so.3",
            "libcrypto.so.3.0.8",
            "libcurl.so.4",
            "libcurl.so.4.8.0",
            "libffi.so.8",
            "libffi.so.8.1.2",
            "libgcc_s-12-20221121.so.1",
            "libgcc_s.so.1",
            "libgio-2.0.so.0",
            "libgio-2.0.so.0.7400.6",
            "libglib-2.0.so.0",
            "libglib-2.0.so.0.7400.6",
            "libgmodule-2.0.so.0",
            "libgmodule-2.0.so.0.7400.6",
            "libgmp.so.10",
            "libgmp.so.10.4.1",
            "libgnutls.so.30",
            "libgnutls.so.30.35.0",
            "libgobject-2.0.so.0",
            "libgobject-2.0.so.0.7400.6",
            "libgssapi_krb5.so.2",
            "libgssapi_krb5.so.2.2",
            "libhogweed.so.6",
            "libhogweed.so.6.5",
            "libidn2.so.0",
            "libidn2.so.0.3.8",
            "libk5crypto.so.3",
            "libk5crypto.so.3.1",
            "libkeyutils.so.1",
            "libkeyutils.so.1.9",
            "libkrb5.so.3",
            "libkrb5.so.3.3",
            "libkrb5support.so.0",
            "libkrb5support.so.0.1",
            "liblz4.so.1",
            "liblz4.so.1.9.4",
            "liblzma.so.5",
            "liblzma.so.5.4.1",
            "libm.so.6",
            "libmount.so.1",
            "libmount.so.1.1.0",
            "libnettle.so.8",
            "libnettle.so.8.5",
            "libnghttp2.so.14",
            "libnghttp2.so.14.24.1",
            "libnl-3.so.200",
            "libnl-3.so.200.26.0",
            "libnuma.so.1",
            "libnuma.so.1.0.0",
            "libp11-kit.so.0",
            "libp11-kit.so.0.3.0",
            "libpcre2-8.so.0",
            "libpcre2-8.so.0.11.0",
            "libresolv.so.2",
            "libsasl2.so.3",
            "libsasl2.so.3.0.0",
            "libselinux.so.1",
            "libssh.so.4",
            "libssh.so.4.9.4",
            "libssh2.so.1",
            "libssh2.so.1.0.1",
            "libssl.so.3",
            "libssl.so.3.0.8",
            "libtasn1.so.6",
            "libtasn1.so.6.6.3",
            "libtirpc.so.3",
            "libtirpc.so.3.0.0",
            "libunistring.so.2",
            "libunistring.so.2.2.0",
            "libvirt-lxc.so.0",
            "libvirt-lxc.so.0.8006.0",
            "libvirt-qemu.so.0",
            "libvirt-qemu.so.0.8006.0",
            "libvirt.so.0",
            "libvirt.so.0.8006.0",
            "libwsman.so.1",
            "libwsman.so.1.0.0",
            "libwsman_client.so.5",
            "libwsman_client.so.5.0.0",
            "libwsman_curl_client_transport.so.1",
            "libwsman_curl_client_transport.so.1.0.0",
            "libxml2.so.2",
            "libxml2.so.2.10.3",
            "libyajl.so.2",
            "libyajl.so.2.1.0",
            "libz.so.1",
            "libz.so.1.2.12",
        ],
    },
    tar = ":libvirt-devel",
    visibility = ["//visibility:public"],
)
